--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
     border: 1px solid red;
 }
 
+.gridSizeButton {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    border-radius: 5px;
+    margin: 10px 0; 
+    padding: 5px;
+}
+
 .gridMap {
     display:flex;
     justify-content: center;
