--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@
     border: 1px solid red;
 }
 
+html {
+    height: 100vh;
+    width: 100vw;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    margin: 0;
+}
+
 .gridSizeButton {
     display: flex;
     justify-content: center;
@@ -16,19 +28,18 @@ button {
 .content {
     display:flex;
     justify-content: center;
-    align-items:center;
-    height: 600px;
+    align-items: center;
+    height: 100%;
 }
 
 .gridMap {
-    width: 600px;
-    height: 600px;
+    width: 90vw;
+    height: 90vh;
     display:flex;
     flex-direction: column;
 }
 
 .row {
-    border: 3px solid green;
     display:flex;
     flex: 1;
     width: 100%
