--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 
 html {
     height: 100vh;
@@ -33,7 +33,7 @@ button {
 }
 
 .gridMap {
-    width: 90vw;
+    width: 90vh;
     height: 90vh;
     display:flex;
     flex-direction: column;
